--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -19,3 +19,38 @@
     border-radius: 30px;
     border: 1px solid lightgray;
 }
+
+.filter-container {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+     width: 100%;
+}
+
+.filter-section {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    height: 50px;
+    width: 225px;
+    border-radius: 30px;
+    
+
+}
+
+.sort-filter {
+    align-items: center;
+    padding: 10px 40px;
+    display: flex;;
+    justify-content: center;
+    
+    height: 40px;
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
+    width: 100%;
+  
+    border: none;
+
+
+
+}
