--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -32,7 +32,8 @@
     width: 100%;
     justify-content: space-between;
     height: 50px;
-    width: 225px;
+    width: 100%;
+    margin: 20px;
     border-radius: 30px;
     
 
@@ -43,11 +44,12 @@
     padding: 10px 40px;
     display: flex;;
     justify-content: center;
-    
+    margin: 20px;
     height: 40px;
     background-color: rgb(255, 255, 255);
     cursor: pointer;
     width: 100%;
+    border-radius: 30px;
   
     border: none;
 
