--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -49,6 +49,12 @@
     cursor: pointer;
 }
 
+.arrow-container{
+    background-color: rgba(230, 245, 255, 1) ;
+    padding: 7px;
+    border-radius: 30px;
+}
+
 
 
 .filter-container {
@@ -56,6 +62,7 @@
     justify-content: center;
     padding: 10px;
      width: 100%;
+     padding-top: 0px;
 }
 
 .filter-section {
@@ -97,4 +104,14 @@
     cursor: pointer;
     height: 60px;
     margin: auto;
+    padding: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.task-button-name {
+    margin-left: 10px;
+    margin-right: 5px;
 }
