--- a/src/styles/AddTask.css
+++ b/src/styles/AddTask.css
@@ -103,9 +103,63 @@ input[type="date"]::-webkit-calendar-picker-indicator, input[type="time"]::-webk
 }
 
 
+.t-checklist {
+    position: relative;
+}
+
+.add-button{
+    position: absolute;
+    top: 51px;
+    right: 12px;
+    border-radius: 100%;
+    border: none;
+    height: 44px;
+    width: 44px; 
+    background-color: rgb(13, 153, 255);
+    cursor: pointer;
+}
+
+.ul-container {
+    list-style-type: none;
+    list-style-position: inside;
+    width: 100%;
+    padding-left: 0px;
+   
+}
+
+.list-item {
+    font-size: 16px;
+    height: 60px;
+    width: 100%;
+    border-radius: 30px;
+    text-align: left;
+    box-sizing: border-box;
+    padding: 25px;
+    background-color: white;
+    margin-bottom: 20px;
+    position: relative;
+
+}
+
+.list-delete-button {
+    position: absolute;
+    top: 8px;
+    right: 12px;
+    border-radius: 100%;
+    border: none;
+    height: 44px;
+    width: 44px; 
+    background-color: rgba(245, 88, 88, 0.8);
+    cursor: pointer;
+}
+
+
 .t-save-button {
     width: 500px;
     margin-top: 50px;
+
+    
+    
 }
 
 .savetask-button {
@@ -116,6 +170,5 @@ input[type="date"]::-webkit-calendar-picker-indicator, input[type="time"]::-webk
     border-radius: 30px;
     padding: 0px 50px 0px 50px;
     
-
-
 }
+
