--- a/src/styles/Numlabel.css
+++ b/src/styles/Numlabel.css
@@ -13,13 +13,22 @@
 
 }
 
-.number-div {
+.number-div-passive {
     position: absolute;
     z-index: 0;
     border-radius: 100%;
     height: 30px;
     width: 30px;
     background-color: rgba(13, 153, 255, 0.1);
+}
+
+.number-div-active {
+    position: absolute;
+    z-index: 0;
+    border-radius: 100%;
+    height: 30px;
+    width: 30px;
+    background-color: rgb(13, 153, 255);
 }
 
 .number-h4 {
