--- a/src/styles/AddTask.css
+++ b/src/styles/AddTask.css
@@ -6,6 +6,10 @@
     justify-content: center;
 }
 
+.task-card {
+    cursor: pointer;
+}
+
 .task-inside {
     width: 500px;
     padding: 50px 0px;
