--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,15 @@
 
 }
 
+html, body, #root, #root>div {
+  min-height: 100%
+}
+
 
 .App {
   text-align: center;
   background-color: rgb(245, 245, 245);
-  height: fit-content;
+  min-height: fit-content;
 }
 
 a {
