--- a/src/styles/AddTask.css
+++ b/src/styles/AddTask.css
@@ -6,6 +6,12 @@
     justify-content: center;
 }
 
+.error-message {
+    text-align: left;
+    color: red;
+    margin: 10px;
+}
+
 .task-card {
     cursor: pointer;
 }
