progress now updating in local storage

--- a/src/styles/ProgressBar.css
+++ b/src/styles/ProgressBar.css
@@ -15,7 +15,8 @@
 }
 
 .progress-div {
-    background-color: red;
+    background-color: rgb(255, 64, 52);
     height: 100%;
     width: 100%;
+    border-radius: 10px;
 }
