--- a/src/styles/AddTask.css
+++ b/src/styles/AddTask.css
@@ -29,13 +29,13 @@
 }
 
 .home-link {
-    width: 30px;
+    width: 40px;
     background-color: rgb(255, 255, 255);
-    padding: 5px;
+    padding: 7px 5px 5px 5px;
     position: absolute;
     left: 0px;
     display: flex;
-    height: 30px;
+    height:40px;
     justify-content: center;
     align-items: center;
     border-radius: 50px;
