--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,13 +1,12 @@
 .home-container {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
 }
 
 .home-inside {
     width: 500px;
-    height: 100vh;
     padding-top: 50px;
     padding-bottom: 50px;
 }
