--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -116,6 +116,8 @@
     margin: 10px 0px 20px 0px;
 }
 
+
+
 .search-message {
     text-align: left;
     margin: 30px;
@@ -130,6 +132,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0px 0px 20px 0px;
 }
 
 .new-task-button {
@@ -140,6 +143,7 @@
     cursor: pointer;
     height: 60px;
     margin: auto;
+    width: 250px;
     padding: 15px ;
     display: flex;
     align-items: center;
