--- a/src/styles/TaskCard.css
+++ b/src/styles/TaskCard.css
@@ -15,13 +15,16 @@
 .task-name-container, .info-container {
     display: flex;
     justify-content:space-between;
-    padding: 20px;
     
+}
+.info-container {
+    padding: 20px;
 }
 
 .name-link {
     width: 100%;
     cursor: pointer;
+    padding: 20px 0px 20px 20px;
 }
 
 .task-name {
@@ -58,6 +61,7 @@
 .edit-buttons {
     display: flex;
     z-index: 1000;
+    padding: 20px 20px 20px 0px;
 }
 
 .edit-button {
