--- a/src/styles/TaskCard.css
+++ b/src/styles/TaskCard.css
@@ -6,6 +6,22 @@
 
 .card-checked {
     background-color: rgba(13, 153, 255, 0.1); 
+    position: relative;
+}
+
+.overlase {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.completed {
+    font-size: 50px;
+    color: white;
 }
 
 .card-notchecked {
